--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     /* paragraph */
     --secondary-color: #757575;
     --accent-color: #2196F3;
-    /* logo */
+    /* logo  */
     --black-color: #000000;
     /* logo-footer, hero, main-bgc */
     --white-color: #FFFFFF;
@@ -14,6 +14,7 @@
     --bgc-gray: #F5F4FA;
     /* footer-bgc*/
     --bgc-footer: #2F303A;
+    /* !!! variable names are not ideal. replace if necessary */
 }
 
 body {
@@ -24,6 +25,35 @@ body {
     letter-spacing: 0.03em;
 }
 
+h1,
+h2,
+h3,
+h4,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ul,
+ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+
+img {
+    display: block;
+}
+
+.container {
+    width: 1200px;
+    /* padding-left: 15px;
+    padding-right: 15px; */
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .list {
     list-style: none;
 }
@@ -32,26 +62,46 @@ body {
     text-decoration: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
 
 .btn {
+    display: inline-block;
+    border: none;
+    border-radius: 4px;
+
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.62;
+    line-height: 1.6;
     cursor: pointer;
     letter-spacing: inherit;
-    border: none;
-    border-radius: 4px;
+    text-align: center;
+
 }
 
-.btn.primary,
-.portfolio-filter .btn.current {
+.btn.primary {
+    min-width: 200px;
+    padding: 10px;
+
     background-color: var(--accent-color);
     color: var(--white-color);
 
 }
 
 .btn.secondary {
+    padding: 6px 22px;
+
     background-color: var(--bgc-gray);
     color: var(--primary-color);
 
@@ -66,6 +116,9 @@ body {
 /* ===========studio=========== */
 
 /* ----------header--------------*/
+.page-header {
+    border-bottom: 1px solid #ECECEC;
+}
 
 .logo {
     color: var(--black-color);
@@ -73,7 +126,6 @@ body {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    text-decoration: none;
 }
 
 .logo-accent {
@@ -101,12 +153,16 @@ body {
 
 }
 
-.page-header .link:hover,
-.page-header .link:focus {
+.page-header .link:hover:not(.logo.link),
+.page-header .link:focus:not(.logo.link) {
     color: var(--accent-color);
 }
 
 /* ----------main--------------*/
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
 .section .section-text {
     color: var(--secondary-color);
@@ -123,9 +179,12 @@ body {
 .hero {
     color: var(--white-color);
     background-color: var(--bgc-footer);
+    text-align: center;
 }
 
 .title-hero {
+    margin-bottom: 30px;
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -137,13 +196,23 @@ body {
 .btn-hero {
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.88;
+
+    line-height: 1.875;
     letter-spacing: 0.06em;
 }
 
+/* active - indicated in the layout */
+/* .btn-hero:hover, 
+.btn-hero:focus, */
+.btn-hero:active {
+    background-color: #188CE8;
+}
+
 /* features */
+
 .features-title {
-    /* user agent stylesheet font-size: 1.7em; */
+    margin-bottom: 10px;
+
     font-size: inherit;
     font-weight: 700;
     line-height: 1.14;
@@ -163,7 +232,9 @@ body {
     background-color: var(--white-color);
 }
 
-.team-title {
+.team-name {
+    margin-bottom: 10px;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -176,8 +247,18 @@ body {
     text-align: center;
 }
 
+.team-title {
+    margin-bottom: 50px;
+}
+
+.team-img {
+    margin-bottom: 30px;
+}
+
 /* ----------footer--------------*/
 .page-footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
     background-color: var(--bgc-footer);
 }
 
@@ -186,6 +267,8 @@ body {
 }
 
 .logo-footer {
+    display: inline-block;
+    margin-bottom: 20px;
     color: var(--white-color);
 }
 
@@ -202,13 +285,27 @@ body {
     color: var(--accent-color);
 }
 
+.contacts-item:not(.contacts-item:last-child) {
+    margin-bottom: 9px;
+}
+
 /* =============portfolio============ */
-.portfolio-cart a {
+
+.portfolio-filter .btn.current {
+    padding: 6px 25px;
+    background-color: var(--accent-color);
+    color: var(--white-color);
+
+}
+
+.portfolio-link {
     color: inherit;
-    text-decoration: none;
+
 }
 
 .portfolio-title {
+    margin-bottom: 4px;
+
     color: inherit;
     font-size: 18px;
     line-height: 2;
@@ -219,4 +316,11 @@ body {
     color: var(--secondary-color);
     font-size: 16px;
     line-height: 1.88;
+}
+
+.portfolio-card-text {
+    padding: 20px 24px;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
 }
