--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ ol {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .container {
@@ -121,8 +123,6 @@ img {
 a size of at least 48*48 */
 
 .page-header {
-    padding-top: 25px;
-    padding-bottom: 25px;
     border-bottom: 1px solid #ECECEC;
 }
 
@@ -134,13 +134,6 @@ a size of at least 48*48 */
 .site-nav {
     display: flex;
     align-items: center;
-}
-
-.site-nav .link {
-    color: var(--primary-color);
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
 }
 
 .site-nav .link.current {
@@ -158,16 +151,19 @@ a size of at least 48*48 */
 
 .site-nav-link {
     display: block;
-    /* usability recommend min 48px*48px
-    padding-top: 16px;
-    padding-bottom: 16px; */
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: var(--primary-color);
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
-/* .logo-header {
-    padding-top: 9px;
-    padding-bottom: 9px;
-} */
 
 .logo {
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
+
     color: var(--black-color);
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -185,10 +181,9 @@ a size of at least 48*48 */
 }
 
 .contacts-header .link {
-    /* /* usability recommend */
-    /* display: block;
-    padding-top: 16px;
-    padding-bottom: 16px; */
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
     color: var(--secondary-color);
     font-weight: 500;
@@ -256,6 +251,17 @@ a size of at least 48*48 */
 }
 
 /* features */
+.features-list {
+    display: flex;
+}
+
+.features-item {
+    width: 270px;
+}
+
+.features-item:not(:last-child) {
+    margin-right: 30px;
+}
 
 .features-title {
     margin-bottom: 10px;
@@ -268,6 +274,19 @@ a size of at least 48*48 */
 
 .features .section-text {
     line-height: 1.71;
+}
+
+/* work */
+.work-title {
+    margin-bottom: 50px;
+}
+
+.work-list {
+    display: flex;
+}
+
+.work-item:not(:last-child) {
+    margin-right: 30px;
 }
 
 /* team */
@@ -298,8 +317,22 @@ a size of at least 48*48 */
     margin-bottom: 50px;
 }
 
-.team-img {
-    margin-bottom: 30px;
+.team-list {
+    display: flex;
+}
+
+.team-item {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.team-item-text {
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 /* work */
