completes the main + header and portfolio footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,6 @@ ol {
     padding-left: 0;
 }
 
-
 img {
     display: block;
     max-width: 100%;
@@ -119,9 +118,6 @@ img {
 
 /* ----------header--------------*/
 
-/* usability recommends using buttons with 
-a size of at least 48*48 */
-
 .page-header {
     border-bottom: 1px solid #ECECEC;
 }
@@ -160,15 +156,17 @@ a size of at least 48*48 */
 }
 
 .logo {
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 24px;
-
     color: var(--black-color);
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
+}
+
+.logo-header {
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .logo-accent {
@@ -201,6 +199,7 @@ a size of at least 48*48 */
 }
 
 /* ----------main--------------*/
+
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -218,6 +217,7 @@ a size of at least 48*48 */
 }
 
 /* hero */
+
 .hero {
     color: var(--white-color);
     background-color: var(--bgc-footer);
@@ -251,6 +251,7 @@ a size of at least 48*48 */
 }
 
 /* features */
+
 .features-list {
     display: flex;
 }
@@ -277,6 +278,11 @@ a size of at least 48*48 */
 }
 
 /* work */
+
+.work {
+    padding-top: 0;
+}
+
 .work-title {
     margin-bottom: 50px;
 }
@@ -290,12 +296,33 @@ a size of at least 48*48 */
 }
 
 /* team */
+
 .team {
     background-color: var(--bgc-gray);
 }
 
+.team-title {
+    margin-bottom: 50px;
+}
+
+.team-list {
+    display: flex;
+}
+
 .team-item {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
     background-color: var(--white-color);
+}
+
+.team-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.team-item-text {
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .team-name {
@@ -313,35 +340,8 @@ a size of at least 48*48 */
     text-align: center;
 }
 
-.team-title {
-    margin-bottom: 50px;
-}
-
-.team-list {
-    display: flex;
-}
-
-.team-item {
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-}
-
-.team-item:not(:last-child) {
-    margin-right: 30px;
-}
-
-.team-item-text {
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-/* work */
-
-.work {
-    padding-top: 0;
-}
-
 /* ----------footer--------------*/
+
 .page-footer {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -349,15 +349,19 @@ a size of at least 48*48 */
     background-color: var(--bgc-footer);
 }
 
-.address-footer {
-    font-style: normal;
-}
-
 .logo-footer {
     display: inline-block;
     margin-bottom: 20px;
 
     color: var(--white-color);
+}
+
+.address-footer {
+    font-style: normal;
+}
+
+.contacts-item:not(:last-child) {
+    margin-bottom: 9px;
 }
 
 .address-link {
@@ -374,9 +378,7 @@ a size of at least 48*48 */
     color: var(--accent-color);
 }
 
-.contacts-item:not(:last-child) {
-    margin-bottom: 9px;
-}
+
 
 /* =============portfolio============ */
 
