--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,6 @@ img {
     border: none;
     border-radius: 4px;
 
-    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
@@ -114,9 +113,9 @@ img {
     color: var(--white-color);
 }
 
-/* ===========studio=========== */
+/* /////////////STUDIO///////////// */
 
-/* ----------header--------------*/
+/* =============header==============*/
 
 .page-header {
     border-bottom: 1px solid #ECECEC;
@@ -198,7 +197,10 @@ img {
     color: var(--accent-color);
 }
 
-/* ----------main--------------*/
+/* =============/header==============*/
+
+
+/* ===============main===============*/
 
 .section {
     padding-top: 94px;
@@ -216,8 +218,7 @@ img {
     text-align: center;
 }
 
-/* hero */
-
+/* ===============hero===============*/
 .hero {
     color: var(--white-color);
     background-color: var(--bgc-footer);
@@ -250,18 +251,17 @@ img {
     background-color: #188CE8;
 }
 
-/* features */
+/* ==============/hero===============*/
 
+/* =============features=============*/
 .features-list {
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .features-item {
-    width: 270px;
-}
-
-.features-item:not(:last-child) {
-    margin-right: 30px;
+    flex-basis: calc((100% - 90px) / 4);
 }
 
 .features-title {
@@ -277,8 +277,9 @@ img {
     line-height: 1.71;
 }
 
-/* work */
+/* ============/features=============*/
 
+/* ===============work===============*/
 .work {
     padding-top: 0;
 }
@@ -289,14 +290,13 @@ img {
 
 .work-list {
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
-.work-item:not(:last-child) {
-    margin-right: 30px;
-}
+/* ==============/work===============*/
 
-/* team */
-
+/* ===============team===============*/
 .team {
     background-color: var(--bgc-gray);
 }
@@ -307,22 +307,23 @@ img {
 
 .team-list {
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .team-item {
+    flex-basis: calc((100% - 90px) / 4);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
     background-color: var(--white-color);
 }
 
-.team-item:not(:last-child) {
-    margin-right: 30px;
-}
-
 .team-item-text {
     padding-top: 30px;
     padding-bottom: 30px;
+
+    text-align: center;
 }
 
 .team-name {
@@ -331,17 +332,19 @@ img {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-    text-align: center;
 }
 
 .team .section-text {
     font-size: 16px;
     line-height: 1.19;
-    text-align: center;
 }
 
-/* ----------footer--------------*/
+/* ==============/team===============*/
 
+/* ==============/main===============*/
+
+
+/* ==============footer==============*/
 .page-footer {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -378,16 +381,21 @@ img {
     color: var(--accent-color);
 }
 
+/* ==============/footer==============*/
+
+/* ///////////  /STUDIO  /////////// */
 
 
-/* =============portfolio============ */
+
+
+/* /////////////PORTFOLIO///////////// */
+
+/* ================filter============= */
 .portfolio-filter {
     display: flex;
     justify-content: center;
-}
-
-.portfolio-filter-item:not(:last-child) {
-    margin-right: 8px;
+    margin-bottom: 50px;
+    gap: 8px;
 }
 
 .portfolio-filter .btn.current {
@@ -397,18 +405,26 @@ img {
     color: var(--white-color);
 }
 
+/* ===============/filter============= */
+
+/* =================card============== */
 .portfolio-card {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
 }
-
-
-
 
 
 .portfolio-link {
     color: inherit;
 
+}
+
+.portfolio-card-text {
+    padding: 20px 24px;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
 }
 
 .portfolio-title {
@@ -426,9 +442,6 @@ img {
     line-height: 1.88;
 }
 
-.portfolio-card-text {
-    padding: 20px 24px;
-    border-right: 1px solid #EEEEEE;
-    border-bottom: 1px solid #EEEEEE;
-    border-left: 1px solid #EEEEEE;
-}
+/* ================/card============== */
+
+/* /////////   /PORTFOLIO   ////////// */
